# EvalMonadExample

./: README.md  haskellEval.cabal
app/: Main.hs
src/: EvalM.hs  Par.hs  Strategy.hs  Sudoku.hs
