name:                haskellEval
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskellEval#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EvalM
                     , Sudoku
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , array
                     , deepseq
  default-language:    Haskell2010

executable haskellEval-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts=all -eventlog -with-rtsopts=-N2
  build-depends:       base
                     , haskellEval
                     , time
                     , parallel
  default-language:    Haskell2010

test-suite haskellEval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellEval
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellEval


  